Found most of missing codepoints

--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Material Design Icons - Codepoints</title>
-        <meta name="description" content="">
+        <meta name="description" content="Find all codepoints for Material Design Icons">
+        <meta name="author" content="Isaac J. Lee">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>Material Design Icons - Codepoints</title>
 
         {{content-for "head"}}
 
