--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
 
         <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
         <link integrity="" rel="stylesheet" href="{{rootURL}}assets/material-design-icons-codepoints.css">
+        <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 
